# modular

./: .gitignore  Cargo.toml  README.md
modular/: Cargo.toml
modular-core/: Cargo.toml
modular-core/src/: error.rs  lib.rs  modular.rs  module.rs  request.rs  response.rs
modular-core/src/core/: error.rs  mod.rs  module.rs
modular-native/: Cargo.toml
modular-native/src/: lib.rs  modular.rs  module.rs  vtable.rs
modular-sys/: Cargo.toml
modular-sys/src/: dll.rs  lib.rs
modular-sys/src/core/: mod.rs
modular/src/core/: error.rs  events.rs  mod.rs  module.rs  modules_registry.rs  pattern.rs
