[package]
name = "modular-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
futures = { version = "0.3", features = [ "executor" ] }
futures-util = "0.3"
thiserror = "1"
tower = { version = "0.4", features = [ "util" ] }

