[package]
name = "modular-native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modular-rs = "0.1"
modular-sys = { path = "../modular-sys" }
parking_lot = "0.12"
tower = "0.4"

bytes = "1"
futures = { version = "0.3", features = [  ] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1", features = [ "rt", "rt-multi-thread" ] }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { version = "1", features = [ "rt" ] }

[lib]
crate-type = [ "cdylib", "lib" ]