[package]
name = "modular-native"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Flassie/modular"
description = "Native bindings to modular-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modular-rs = { version = "0.1", path = "../modular" }
modular-sys = { version = "0.1", path = "../modular-sys" }
parking_lot = "0.12"
tower = "0.4"

bytes = "1"
futures = { version = "0.3", features = [  ] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1", features = [ "rt", "rt-multi-thread" ] }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { version = "1", features = [ "rt" ] }

[lib]
crate-type = [ "cdylib", "lib" ]