[package]
name = "modular-sys"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Flassie/modular"
description = "Native bindings to modular-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = { version = "0.8.0", optional = true }
bytes = { version = "1", optional = true }
tower = { version = "0.4", optional = true }
async-trait = { version = "0.1", optional = true }
modular-core = {version = "0.1", path = "../modular-core"}
futures-util = { version = "0.3", optional = true }
anyhow = { version = "1", optional = true }
parking_lot = { version = "0.12", optional = true, features = [ "send_guard" ] }
once_cell = { version = "1", optional = true }
tokio = { version = "1", optional = true, features = [ "rt" ] }

[features]
core = [
    "dep:bytes",
    "dep:tower",
    "dep:async-trait",
    "dep:futures-util",
    "dep:anyhow",
    "dep:parking_lot",
]

dll = [
    "core",
    "dep:libloading",
    "dep:once_cell",
    "dep:tokio"
]